# exforparser

./: .gitignore  .gitmodules  MANIFEST.in  README.md  config.py  exfor_dictionary  exparser.py  indexing.py  path.py  pyproject.toml  requirements.txt  ripl3_json  setup.py  tabulated.py  trash.py
.github/workflows/: auto_update.yml
dictionary/: README.md  abbreviations.py  diction15.json  diction17.json  diction2.json  diction20.json  diction21.json  diction22.json  diction236.json  diction25.json  diction30.json  diction31.json  diction32.json  diction33.json  diction34.json  diction4.json  diction8.json  exfor_dictionary.py
dictionary/json/: diction1.json  diction144.json  diction16.json  diction18.json  diction19.json  diction207.json  diction209.json  diction213.json  diction23.json  diction24.json  diction3.json  diction5.json  diction6.json  diction7.json
examples/: example_bib_reaction_parse.ipynb
examples/exfortable/: xs.py
parser/: exceptions.py  exfor_bib.py  exfor_block.py  exfor_common.py  exfor_data.py  exfor_dataset.py  exfor_entry.py  exfor_field.py  exfor_pointer.py  exfor_reaction.py  exfor_subentry.py  exfor_unit.py  list_x4files.py  utilities.py
pickle/: institute.pickle  show_pickle.py
pickles/: entry.pickle
plotting/: xs.py
sql/: creation.py  models.py  queries.py
src/exforparser/: config.py  exparser.py  tabulate.py  (+1 more)
tabulated/: data_dir_files.py  data_locations.py  data_process.py  data_write.py  exfor_reaction_mt.py  mf3.json  mt.json
utilities/: elem.py  operation_util.py  ripl3_descretelevel.py  ripl3_mass.py  utilities.py
(+2645 files in other folders)
